--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools_c"]
 	path = tools_c
 	url = git@github.com:kubaau/tools_c.git
+[submodule "kazmath"]
+	path = kazmath
+	url = git@github.com:Kazade/kazmath.git
