--- a/vs/ogl_sandbox_c.vcxproj
+++ b/vs/ogl_sandbox_c.vcxproj
@@ -41,7 +41,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{EB550B28-0C29-4A82-92D6-CF8D8249C7B2}</ProjectGuid>
-    <RootNamespace>ogl_c</RootNamespace>
+    <RootNamespace>ogl_sandbox_c</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -80,29 +80,29 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)..\..\..\..\kazmath;$(ProjectDir)..\..\..\..\pthread-win32;$(ProjectDir)..\src;$(ProjectDir)..\..\..;$(ProjectDir)..\..\..\ext;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)..\..\..\..\kazmath\build_$(PlatformName)\kazmath\$(Configuration);$(ProjectDir)..\..\..\..\pthread-win32\bin\$(PlatformName)_MSVC2015.$(Configuration);$(ProjectDir)..\..\..\ext\lib\$(Configuration)-$(PlatformName);$(ProjectDir)..\..\..\..\pthread-win32\bin\$(PlatformName)_MSVC2015.$(Configuration);$(ProjectDir)..\..\..\ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\src;$(ProjectDir)..;$(ProjectDir)ext;$(ProjectDir)..\kazmath;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)build\$(Configuration)-$(PlatformName)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(Configuration)-$(PlatformName)\</IntDir>
     <TargetName>$(ProjectName)-$(Configuration)-$(PlatformName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(ProjectDir)..\..\..\..\kazmath;$(ProjectDir)..\..\..\..\pthread-win32;$(ProjectDir)..\src;$(ProjectDir)..\..\..;$(ProjectDir)..\..\..\ext;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)..\..\..\..\kazmath\build_$(PlatformName)\kazmath\$(Configuration);$(ProjectDir)..\..\..\..\pthread-win32\bin\$(PlatformName)_MSVC2015.$(Configuration);$(ProjectDir)..\..\..\ext\lib\$(Configuration)-$(PlatformName);$(ProjectDir)..\..\..\..\pthread-win32\bin\$(PlatformName)_MSVC2015.$(Configuration);$(ProjectDir)..\..\..\ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\src;$(ProjectDir)..;$(ProjectDir)ext;$(ProjectDir)..\kazmath;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)build\$(Configuration)-$(PlatformName)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(Configuration)-$(PlatformName)\</IntDir>
     <TargetName>$(ProjectName)-$(Configuration)-$(PlatformName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)..\..\..\..\kazmath;$(ProjectDir)..\..\..\..\pthread-win32;$(ProjectDir)..\src;$(ProjectDir)..\..\..;$(ProjectDir)..\..\..\ext;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)..\..\..\..\kazmath\build_$(PlatformName)\kazmath\$(Configuration);$(ProjectDir)..\..\..\..\pthread-win32\bin\$(PlatformName)_MSVC2015.$(Configuration);$(ProjectDir)..\..\..\ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\src;$(ProjectDir)..;$(ProjectDir)ext;$(ProjectDir)..\kazmath;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)build\$(Configuration)-$(PlatformName)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(Configuration)-$(PlatformName)\</IntDir>
     <TargetName>$(ProjectName)-$(Configuration)-$(PlatformName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)..\..\..\..\kazmath;$(ProjectDir)..\..\..\..\pthread-win32;$(ProjectDir)..\src;$(ProjectDir)..\..\..;$(ProjectDir)..\..\..\ext;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)..\..\..\..\kazmath\build_$(PlatformName)\kazmath\$(Configuration);$(ProjectDir)..\..\..\..\pthread-win32\bin\$(PlatformName)_MSVC2015.$(Configuration);$(ProjectDir)..\..\..\ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\src;$(ProjectDir)..;$(ProjectDir)ext;$(ProjectDir)..\kazmath;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)ext\lib\$(Configuration)-$(PlatformName);$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)build\$(Configuration)-$(PlatformName)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(Configuration)-$(PlatformName)\</IntDir>
     <TargetName>$(ProjectName)-$(Configuration)-$(PlatformName)</TargetName>
@@ -115,7 +115,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread_dll.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
@@ -128,7 +128,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread_dll.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
@@ -145,7 +145,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread_dll.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
@@ -162,7 +162,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread_dll.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;pthread.lib;kazmath.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
